--- a/kernel.ipynb
+++ b/kernel.ipynb
@@ -136,6 +136,9 @@
         "      plt.show()\n",
         "\n",
         "def numerical_data_visualization(data: pd.DataFrame, categorical_features: list = []):\n",
+        "  \"\"\"\n",
+        "  Visualiza mediante un diagrama de bigote los datos númericos del dataset\n",
+        "  \"\"\"\n",
         "  num_features = data.columns[~data.columns.isin(cat_features)].tolist()\n",
         "  r = c = 0\n",
         "  fig,ax = plt.subplots(4,2,figsize=(15,14))\n",
@@ -153,6 +156,9 @@
         "    return clf.__class__.__name__\n",
         "\n",
         "def neuronal_network(n_features: int):\n",
+        "    \"\"\"\n",
+        "    Crea un red nerunal en keras para poder utilizarla en sklearn\n",
+        "    \"\"\"\n",
         "    clf = Sequential()\n",
         "    clf.add(Dense(16, activation='relu', input_dim = n_features))\n",
         "    clf.add(Dense(16, activation='relu'))\n",
@@ -193,7 +199,7 @@
         "* Select K Best mediante Chi-cuadrado\n",
         "* Clasificación de características con eliminación de características recursivas(RFE)\n",
         " \n",
-        "**Procedimiento**: se van a probar todas las combinaciones posibles entre modelo, normalización y EDA, gracias a la *Pipeline* de sklearn. Al final del procedimiento se escogerá al mejor modelo y se realizará un ajuste de sus hiper parámetros para obtener el mejor clasificador posible junto a las posibles transformaciones\n"
+        "**Procedimiento**: se van a probar todas las combinaciones posibles entre modelo, normalización y reducción de la dimensionalidad haciendo uso de las *Pipeline* de sklearn. Al final del procedimiento se escogerá al mejor modelo y se realizará un ajuste de sus hiper-parámetros para obtener el mejor clasificador posible.\n"
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -208,6 +214,9 @@
         "outputId": "5d6f8bcd-89e6-4d3d-ab6a-328d7df9516a"
       },
       "source": [
+        "\"\"\"\n",
+        "Para la reducción de dimensionalidad se van a probar a reducir a 6 y a 10 las características de las 12 iniciales\n",
+        "\"\"\"\n",
         "k1 = 6\n",
         "k2 = 10\n",
         "\n",
@@ -341,7 +350,7 @@
     },
     {
       "source": [
-        "Como es natural en los datasets de Kaggle los datos estan bastante limpios(sin valores perdidos) para ir directamente a la parte de los estimadores. Como disponimos de muy pocas muestras tenemos que utiliza validación cruzada para obtener un mejor rendimento."
+        "Como es natural en los datasets de **Kaggle** los datos están bastante limpios(sin valores perdidos) para ir directamente a la parte de los estimadores. Como disponemos de muy pocas muestras tenemos que utilizar validación cruzada para obtener un mejor rendimiento.\n"
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -485,7 +494,7 @@
     },
     {
       "source": [
-        "Segun el mapa de correlaciones existen varibles que afectan considerablemente a la clase como la edad o 'serum creatinine', sin embargo exiten otras como el hecho que el paciente fuera fumador o sexo que no guardan mucha correlación. Además podemos ver que entre las caracterisiticas no suelen presentarte una alta o baja correlación salvando algunas expcetiones. En suma, podemos concluir que con una algoritmo de redución de dimensionales se podría mejorar el rendimento de los modelos empleados. "
+        "Segun el mapa de correlaciones existen varibles que afectan considerablemente a la clase como la edad o la cantidad de 'serum creatinine', sin embargo existen otras como el hecho que el paciente fuera fumador o el sexo que no guardan mucha correlación. Además podemos ver que las características entre ellas no suelen presentarse una alta o baja correlación salvando algunas excepciones. En suma, podemos concluir que con una algoritmo de reducción de dimensiones se podría mejorar el rendimiento de los modelos empleados si se mantiene un número adecuado de columnas(entre 6 o 10 como se había planteado inicialmente)."
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -526,7 +535,7 @@
         "id": "jiRU4Da2fsr3"
       },
       "source": [
-        "Si representamos el conjunto de datos con un algoritmo TSNE en dos dimentiones podemos ver que se trata de un conjunto de muestros complicado de resolver para clasificadores lineales simples debido a que no es posible una división adecuada de las muestras para estos algoritmos, sin embargo los métodos de enseble basados en árboles deberían dar un buen rendimente, de todas formas se probará con un alto número de modelos y transformaciones. Además se presentan una serie de puntos fuera de la distribución suguramente a causa de la precensia de algunos outliers."
+        "Si representamos el conjunto de datos con un algoritmo TSNE en dos dimensiones podemos ver que se trata de un conjunto de nuestros complicado de resolver para clasificadores lineales simples debido a que no es posible una división adecuada de las muestras para estos algoritmos, sin embargo los métodos de ensemble basados en árboles deberían dar un buen rendimiento, de todas formas se probará con un alto número de modelos y transformaciones. Además se presentan una serie de puntos fuera de la distribución seguramente a causa de la presencia de algunos outliers."
       ]
     },
     {
@@ -537,7 +546,7 @@
       "source": [
         "### Preparación de datos\n",
         "\n",
-        "En esta parte se quitan los outiliers del conjuntos de datos y se procede a hacer uso de un método de aumentación de datos usando el algoritmo SMOTE."
+        "En esta parte se quitan los outliers del conjunto de datos inicial y se procede a hacer uso de un método de aumentación de datos usando el algoritmo SMOTE."
       ]
     },
     {
@@ -601,7 +610,7 @@
     },
     {
       "source": [
-        "Como se puede apreciar el procedimento a quitado un par de muestras que sobresalian de la distrubución de muestras inicial."
+        "Como se puede apreciar el procedimiento a quitado un par de muestras que sobresalen de la distribución de muestras inicial, con lo cual obtenemos una distribución más limpia a cambio de perder un par de muestras."
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -655,7 +664,7 @@
     },
     {
       "source": [
-        "Ahora las muestras estan más equilibradas. Se usaran en las pruebas los tres datasets, para cada uno de ellos se van a probar todas las combinaciones posibles entres los algoritmos. "
+        "Ahora las muestras están más equilibradas. Se usarán en las pruebas los tres datasets, para cada uno de ellos se van a probar todas las combinaciones posibles entres los algoritmos."
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -666,9 +675,9 @@
         "id": "OmtUlqavX46S"
       },
       "source": [
-        "## Modeling\n",
+        "## Pruebas con Modelos\n",
         "\n",
-        "En esta parte se van a entrenar y valorar muchos modelos, como métrica se va a utilizar la AUC debedio a que los que estamos buscando es el mejor clasificador con la mejor relación posible entre falsos negativos y falsos positivos. De cada datasets preparado se van a escoger los tres mejores modelos en base a el rendiemnto en el entrenamiento y en el test, para entrnar los modelos se va a utilziar la función *cross_validate* que implementa una validación cruzada k-flod estratificada, como hiperparametro se va a utilziar k = 5. Finalmente se representrá los mejores modelos con su matriz de confunción y su curva ROC"
+        "En esta parte se van a entrenar y valorar muchos modelos, como métrica se va a utilizar la curva ROC junto a la AUC debido a que los que estamos buscando es el mejor clasificador con la mejor relación posible entre falsos negativos y falsos positivos. De cada datasets preparado se van a escoger los tres mejores modelos en base a el rendimiento en el entrenamiento y en el test, para entrenar los modelos se va a utilizar la función *cross_validate* que implementa una validación cruzada k-flod estratificada, como hiper-parámetro se va a utilizar k = 5. Finalmente se representará los mejores modelos con su matriz de confusión y su curva ROC."
       ]
     },
     {
@@ -850,7 +859,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n",
         "def train_models(deep_learning: bool = False):\n",
         "    models_data = {}\n",
         "    for ds in DATASETS:\n",
@@ -930,7 +938,9 @@
     },
     {
       "source": [
-        "### Deep Learning"
+        "### Deep Learning\n",
+        "\n",
+        "Se han probado varias arquitecturas para la red neuronal, la que se presenta en el método *neuronal_network()* es con la que mejores resultados hemos conseguido, se podría realizar un estudio exhaustivo de sus hiperparámetros para obtener un mejor rendimiento sin embargo los métodos ensemble basados en árboles generan muy buenos resultados a un coste de tiempo mucho menor."
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -1350,7 +1360,7 @@
     },
     {
       "source": [
-        "Se generan muy buenos resultados, sin embargo los mejor se obtienen para el dataset con aumentación de datos y haciendo uso de un randomForest como clasificador."
+        "Se generan muy buenos resultados para las distintas combinaciones, sin embargo los mejores se obtienen para el dataset con aumentación de datos y haciendo uso de un randomForest como clasificador que tanto en entrenamiento como en test es superior a un 93% AUC. Como haciendo uso de transformaciones o sin ellas se llegan a resultados similares para el procesamiento de ajuste únicamente se va a escoger un randomForest simple junto al conjunto de datos aumentado."
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -1359,7 +1369,7 @@
       "source": [
         "## Fine tuning\n",
         "\n",
-        "El proceso de fine tuning consiste en probar diferentes conbinaciones de los hiper-parametros medainte una busquda aleatoria, la función RandomizedSearchCV implemnta este comportamiento. Además se utiliza otra vez un proceso k-flod estratificado con k = 5"
+        "El proceso de fine tuning consiste en probar diferentes combinaciones de los hiper-parámetros mediante una búsqueda aleatoria, la función RandomizedSearchCV implementa este comportamiento. Además se utiliza otra vez un proceso k-flod estratificado con k = 5."
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -1382,19 +1392,18 @@
         "ds = DATASETS[2]\n",
         "X_train, X_test, y_train, y_test = ds.split()\n",
         "\n",
-        "# Number of trees in Random forest\n",
+        "# Número de árboles\n",
         "n_estimators=list(range(100,1000,100))\n",
-        "# Maximum number of levels in a tree\n",
+        "# Maxima profundidad\n",
         "max_depth = list(range(4,13,4))\n",
-        "# The minimum number of samples required to be at a leaf node\n",
+        "# El número mínimo de muestras necesarias para estar en un nodo hoja\n",
         "min_samples_leaf=[1,2,5,7]\n",
-        "# Minimum number of samples required to split an internal node\n",
+        "# Número mínimo de muestras necesarias para dividir un nodo interno\n",
         "min_samples_split=list(range(2,9,2))\n",
-        "# Number of fearures to be considered at each split\n",
+        "# Número de características a considerar en cada división\n",
         "max_features=['auto','sqrt']\n",
         "\n",
         "\n",
-        "# Hyperparameters dict\n",
         "param_grid = {\"n_estimators\":n_estimators,\n",
         "              \"max_depth\":max_depth,\n",
         "              \"min_samples_split\":min_samples_split,\n",
@@ -1409,6 +1418,19 @@
         "rf = model.fit(X_train,y_train)\n",
         "print(rf.best_params_)"
       ]
+    },
+    {
+      "source": [
+        "El mejor clasficador que encontro el método fue el siguiente:\n",
+        "\n",
+        "* Número de árboles = 200\n",
+        "* Profundidad = 8\n",
+        "* Muestras en un nodo hoja = 1\n",
+        "* Muestras para la división = 2\n",
+        "* Número de características a considerar en cada división = método auto"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     },
     {
       "cell_type": "code",
