--- a/kernel.ipynb
+++ b/kernel.ipynb
@@ -157,7 +157,7 @@
         "\n",
         "def neuronal_network(n_features: int):\n",
         "    \"\"\"\n",
-        "    Crea un red nerunal en keras para poder utilizarla en sklearn\n",
+        "    Crea un red neuronal en keras para poder utilizarla en sklearn\n",
         "    \"\"\"\n",
         "    clf = Sequential()\n",
         "    clf.add(Dense(16, activation='relu', input_dim = n_features))\n",
@@ -677,7 +677,7 @@
       "source": [
         "## Pruebas con Modelos\n",
         "\n",
-        "En esta parte se van a entrenar y valorar muchos modelos, como métrica se va a utilizar la curva ROC junto a la AUC debido a que los que estamos buscando es el mejor clasificador con la mejor relación posible entre falsos negativos y falsos positivos. De cada datasets preparado se van a escoger los tres mejores modelos en base a el rendimiento en el entrenamiento y en el test, para entrenar los modelos se va a utilizar la función *cross_validate* que implementa una validación cruzada k-flod estratificada, como hiper-parámetro se va a utilizar k = 5. Finalmente se representará los mejores modelos con su matriz de confusión y su curva ROC."
+        "En esta parte se van a entrenar y valorar muchos modelos, como métrica se va a utilizar la curva ROC junto a la AUC debido a que los que estamos buscando es el mejor clasificador con la mejor relación posible entre falsos negativos y falsos positivos. De cada datasets preparado se van a escoger los tres mejores modelos en base a el rendimiento en el entrenamiento y en el test, para entrenar los modelos se va a utilizar la función *cross_validate* que implementa una validación cruzada k-flod estratificada, como hiper-parámetro se va a utilizar k = 5. Finalmente se representarán los mejores modelos con su matriz de confusión y su curva ROC sobre los datos de test. Aunque el procedimiento de validación cruzada con k-flod ya garantiza una división entre entrenamiento y test, para validar la efectiva de nuestros estimadores si a utilizado un procedimiento similar a las competiciones de Kaggle en donde tenemos un conjunto de datos de pruebas finales por dataset para comprobar la efectividad de los modelos planteados."
       ]
     },
     {
@@ -1360,7 +1360,7 @@
     },
     {
       "source": [
-        "Se generan muy buenos resultados para las distintas combinaciones, sin embargo los mejores se obtienen para el dataset con aumentación de datos y haciendo uso de un randomForest como clasificador que tanto en entrenamiento como en test es superior a un 93% AUC. Como haciendo uso de normalizaciones o sin ellas se llegan a resultados similares para el procesamiento de ajuste únicamente se va a escoger un randomForest simple junto al conjunto de datos aumentado."
+        "Se generan muy buenos resultados para las distintas combinaciones, sin embargo los mejores se obtienen para el dataset con aumentación de datos y haciendo uso de un randomForest como clasificador que tanto en entrenamiento como en test es superior a un 94% AUC. Como haciendo uso de normalizaciones o sin ellas se llegan a resultados similares para el procesamiento de ajuste únicamente se va a escoger un randomForest simple junto al conjunto de datos aumentado."
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -1472,14 +1472,20 @@
     },
     {
       "source": [
-        "Ensemble mola, se mejora un poco con el fine tunig. Una pena deep learning, yo tenia razon desde el principio. Más proceso de aumentacion de datos como por ejemplo GAN"
+        "Como se planteó cuando observamos la representación del conjunto de datos mediante t-SNE, los métodos basados en ensemble , en este caso usando un RandomForest, son con los que hemos logrado un mejor rendimiento con respecto una métrica basada en la curva ROC y la relación de falsos positivos y negativos. Hubiera sido interesante plantear un ensemble basado en redes neuronales para sacar comparativas, dado que la solución del problema utilizando Deep Learning no ha logrado sobreponerse a algunos métodos *clásicos* que hemos empleado.\n",
+        "\n",
+        " Se ha comprobado también que utilizar validación cruzada con k-fold para problemas con pocos datos puede llegar a ser beneficioso para los clasificadores que estemos usando, asimismo realizar un análisis exploratorio de los datos es esencial para poder extrapolar relaciones entre ellos que nos ayuden a realizar mejores predicciones. Por último, aunque dentro de la literatura el algoritmo SMOTE es muy utilizado para la aumentación de datos sería interesante aplicar otras técnicas de aprendizaje generativa para este problema como podrían ser el uso de [GANs](https://www.nature.com/articles/s41598-019-52737-x) para la aumentación de datos.\n"
       ],
       "cell_type": "markdown",
       "metadata": {}
     },
     {
       "source": [
-        "## Referencias"
+        "## Referencias\n",
+        "\n",
+        "* [Sklearn](https://scikit-learn.org/)\n",
+        "* [Repositorio con los datos](https://www.kaggle.com/andrewmvd/heart-failure-clinical-data)\n",
+        "* [Apuntes de clases](https://ncvt-aep.ulpgc.es/cv/ulpgctp21/course/view.php?id=118)"
       ],
       "cell_type": "markdown",
       "metadata": {}
