--- a/kernel.ipynb
+++ b/kernel.ipynb
@@ -20,7 +20,7 @@
         "# Ciencia de Datos - Trabajo Final\n",
         "Autor: Miguel Ángel Medina Ramírez\n",
         "\n",
-        "El objetivo de este proyecto es encontrar el mejor clasificador para el conjunto de datos con el fin de obtener un buen modelo que nos permita distinguir entre un conjuntos de pacientes a aquellos que puedan padecer de riesgo cardiaco, para ello se probarán diferentes transformaciones y modelos con el fin de obtener un buen estimador que nos garantice una buena relación entre falsos positivos y negativos.El conjunto de datos con el que se ha trabajado ha sido extraído de kaggle y se encuentra en el siguiente [enlace](https://www.kaggle.com/andrewmvd/heart-failure-clinical-data).\n"
+        "El objetivo de este proyecto es encontrar el mejor clasificador para el conjunto de datos con el fin de obtener un modelo que nos permita distinguir de entre un conjuntos de pacientes a aquellos que puedan padecer de riesgo cardiaco, para ello se probarán diferentes transformaciones y modelos con el fin de obtener un buen estimador que nos garantice una buena relación entre falsos positivos y negativos.El conjunto de datos con el que se ha trabajado ha sido extraído de kaggle y se encuentra en el siguiente [enlace](https://www.kaggle.com/andrewmvd/heart-failure-clinical-data).\n"
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -416,7 +416,7 @@
     },
     {
       "source": [
-        "Vemos que existe una gran dispariedad de en el balanceado de los datos, y hay un gran efecto de algunas variables como el 'sexo' o la 'anemia' con respecto al valor de la clase."
+        "Vemos que existe una gran dispariedad en el balanceado de los datos, y hay un gran efecto de algunas variables como el 'sexo' o la 'anemia' con respecto al valor de la clase."
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -451,7 +451,7 @@
     },
     {
       "source": [
-        "Como se puede observar en los diagramas de caja anteriores, 'creatinine_phosphokinase', 'platelets' y 'serum_creatinine' tienen valores atípicos que podrían afectar la toma de decisiones de nuestro modelo. Existen varias técnicas con las que se pueden tratar los valores atípicos, en este trabajo se usará la detección de valores atípicos haciendo uso de modelos no supervisados mediante el factor de valores atípicos locales (LOF). "
+        "Como se puede observar en los diagramas de caja anteriores, 'creatinine_phosphokinase', 'platelets' y 'serum_creatinine' tienen valores atípicos que podrían afectar la toma de decisiones de nuestro modelo. Existen varias técnicas con las que se pueden tratar los valores atípicos, en este trabajo se usará la detección de outliers haciendo uso de modelos no supervisados mediante el factor de valores atípicos locales (LOF). "
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -535,7 +535,7 @@
         "id": "jiRU4Da2fsr3"
       },
       "source": [
-        "Si representamos el conjunto de datos con un algoritmo TSNE en dos dimensiones podemos ver que se trata de un conjunto de nuestros complicado de resolver para clasificadores lineales simples debido a que no es posible una división adecuada de las muestras para estos algoritmos, sin embargo los métodos de ensemble basados en árboles deberían dar un buen rendimiento, de todas formas se probará con un alto número de modelos y transformaciones. Además se presentan una serie de puntos fuera de la distribución seguramente a causa de la presencia de algunos outliers."
+        "Si representamos el conjunto de datos con un algoritmo TSNE en dos dimensiones podemos ver que se trata de un conjunto de muestras complicado de resolver para clasificadores lineales simples, debido a que no es posible una división adecuada de las muestras para estos algoritmos, sin embargo los métodos de ensemble basados en árboles deberían dar un buen rendimiento, de todas formas se probará con un alto número de modelos y transformaciones. Además se presentan una serie de puntos fuera de la distribución seguramente a causa de la presencia de algunos outliers."
       ]
     },
     {
@@ -664,7 +664,7 @@
     },
     {
       "source": [
-        "Ahora las muestras están más equilibradas. Se usarán en las pruebas los tres datasets, para cada uno de ellos se van a probar todas las combinaciones posibles entres los algoritmos."
+        "Ahora el conjunto de datos está perfectamente equilibrado. Se usarán en las pruebas los tres datasets, para cada uno de ellos se van a probar todas las combinaciones posibles entres los algoritmos."
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -677,7 +677,7 @@
       "source": [
         "## Pruebas con Modelos\n",
         "\n",
-        "En esta parte se van a entrenar y valorar muchos modelos, como métrica se va a utilizar la curva ROC junto a la AUC debido a que los que estamos buscando es el mejor clasificador con la mejor relación posible entre falsos negativos y falsos positivos. De cada datasets preparado se van a escoger los tres mejores modelos en base a el rendimiento en el entrenamiento y en el test, para entrenar los modelos se va a utilizar la función *cross_validate* que implementa una validación cruzada k-flod estratificada, como hiper-parámetro se va a utilizar k = 5. Finalmente se representarán los mejores modelos con su matriz de confusión y su curva ROC sobre los datos de test. Aunque el procedimiento de validación cruzada con k-flod ya garantiza una división entre entrenamiento y test, para validar la efectiva de nuestros estimadores si a utilizado un procedimiento similar a las competiciones de Kaggle en donde tenemos un conjunto de datos de pruebas finales por dataset para comprobar la efectividad de los modelos planteados."
+        "En esta parte se van a entrenar y valorar muchos modelos, como métrica se va a utilizar la curva ROC junto a la AUC debido a que los que estamos buscando es el mejor clasificador con la mejor relación posible entre falsos negativos y falsos positivos. De cada dataset preparado se van a escoger los tres mejores modelos en base a el rendimiento en el entrenamiento y en el test, para entrenar los modelos se va a utilizar la función *cross_validate* que implementa una validación cruzada k-flod estratificada, como hiper-parámetro se va a utilizar k = 5. Finalmente se representarán los mejores modelos con su matriz de confusión y su curva ROC sobre los datos de test. Aunque el procedimiento de validación cruzada con k-flod ya garantiza una división entre entrenamiento y test, para validar la efectiva de nuestros estimadores se ha utilizado un procedimiento similar a las competiciones de Kaggle en donde tenemos un conjunto de datos de pruebas finales por dataset para comprobar la efectividad de los modelos planteados, en este caso se ha utilizado el 15% de los datos para crear el conjunto de test."
       ]
     },
     {
@@ -1360,7 +1360,7 @@
     },
     {
       "source": [
-        "Se generan muy buenos resultados para las distintas combinaciones, sin embargo los mejores se obtienen para el dataset con aumentación de datos y haciendo uso de un randomForest como clasificador que tanto en entrenamiento como en test es superior a un 94% AUC. Como haciendo uso de normalizaciones o sin ellas se llegan a resultados similares para el procesamiento de ajuste únicamente se va a escoger un randomForest simple junto al conjunto de datos aumentado."
+        "Se generan muy buenos resultados para las distintas combinaciones, sin embargo los mejores se obtienen para el dataset con aumentación de datos y haciendo uso de un RandomForest como clasificador que tanto en entrenamiento como en test es superior a un 94% AUC. Como haciendo uso de normalizaciones o sin ellas se llegan a resultados similares para el procesamiento de ajuste únicamente se va a escoger un RandomForest simple junto al conjunto de datos aumentado."
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -1369,7 +1369,7 @@
       "source": [
         "## Fine tuning\n",
         "\n",
-        "El proceso de fine tuning consiste en probar diferentes combinaciones de los hiper-parámetros mediante una búsqueda aleatoria, la función RandomizedSearchCV implementa este comportamiento. Además se utiliza otra vez un proceso k-flod estratificado con k = 5."
+        "El proceso de fine tuning consiste en probar diferentes combinaciones de los hiper-parámetros mediante una búsqueda aleatoria, la función *RandomizedSearchCV* implementa este comportamiento. Además se utiliza otra vez un proceso k-flod estratificado con k = 5."
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -1472,9 +1472,9 @@
     },
     {
       "source": [
-        "Como se planteó cuando observamos la representación del conjunto de datos mediante t-SNE, los métodos basados en ensemble , en este caso usando un RandomForest, son con los que hemos logrado un mejor rendimiento con respecto una métrica basada en la curva ROC y la relación de falsos positivos y negativos. Hubiera sido interesante plantear un ensemble basado en redes neuronales para sacar comparativas, dado que la solución del problema utilizando Deep Learning no ha logrado sobreponerse a algunos métodos *clásicos* que hemos empleado.\n",
+        "Como se planteó cuando observamos la representación del conjunto de datos mediante T-SNE, los métodos basados en ensemble, en este caso usando un RandomForest, son con los que hemos logrado un mejor rendimiento con respecto una métrica basada en la curva ROC y la relación de falsos positivos y negativos. Hubiera sido interesante plantear un ensemble basado en redes neuronales para sacar comparativas, dado que la solución del problema utilizando Deep Learning no ha logrado sobreponerse a algunos métodos *clásicos* que se han empleado. Finalmente, se ha llegado a obtener un modelo que logra clasificar muy bien las muestras con una precisión de un 96% AUC y una matriz de confusión adecuada.\n",
         "\n",
-        " Se ha comprobado también que utilizar validación cruzada con k-fold para problemas con pocos datos puede llegar a ser beneficioso para los clasificadores que estemos usando, asimismo realizar un análisis exploratorio de los datos es esencial para poder extrapolar relaciones entre ellos que nos ayuden a realizar mejores predicciones. Por último, aunque dentro de la literatura el algoritmo SMOTE es muy utilizado para la aumentación de datos sería interesante aplicar otras técnicas de aprendizaje generativa para este problema como podrían ser el uso de [GANs](https://www.nature.com/articles/s41598-019-52737-x) para la aumentación de datos.\n"
+        "Se ha comprobado también que utilizar validación cruzada con k-fold para problemas con pocos datos puede llegar a ser beneficioso para los clasificadores que estemos usando, asimismo realizar un análisis exploratorio de los datos es esencial para poder extrapolar relaciones entre ellos que nos ayuden a realizar mejores predicciones. Por último, aunque dentro de la literatura el algoritmo SMOTE es muy utilizado para la aumentación de datos sería interesante aplicar otras técnicas de aprendizaje generativa para este problema como podrían ser el uso de [GANs](https://www.nature.com/articles/s41598-019-52737-x) para la aumentación de datos.\n"
       ],
       "cell_type": "markdown",
       "metadata": {}
